[package]
name = "Assignment1_backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
num-bigint = "0.4.6"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.42.0", features = ["full"] }

